force-app/main/default/objects/Certification_Setting__mdt/Certification_Setting__mdt.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Certification Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>