force-app/main/default/objects/Certification_Setting__mdt/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <label>Cost USD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>