force-app/main/default/objects/Certification_Setting__mdt/fields/Exam_Code__c.field-meta.xml
<CustomField>
    <fullName>Exam_Code__c</fullName>
    <label>Exam Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>